[package]
name = "prec"
version = "0.0.1"
authors = ["nik <nik@parkellipsen.de>"]
edition = "2021"
license = "GPL-3.0+"
description = "The Perpetual Recorder"
readme = "README.md"
repository = "https://github.com/the-drunk-coder/prec/"
categories = ["multimedia::audio"]
keywords = ["audio", "recorder", "fieldrecording"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { version="0.13", features = ["jack"] }
crossbeam = "0.8"
hound = "3.4"
anyhow = "1.0"
getopts = "0.2"